--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -16,7 +16,8 @@
   "plugins": [
     "babel",
     "flowtype",
-    "prettier"
+    "prettier",
+    "prodo"
   ],
   "extends": [
     "prettier"
@@ -25,6 +26,12 @@
     "prettier/prettier": ["error", {
       "bracketSpacing": false,
       "trailingComma": "all"
+    }],
+    "prodo/sort-imports-by-path": ["error", {
+      "sortOrder": ["type", "named", "unnamed"],
+      "enforceBlankLine": true,
+      "enforceTrailingLine": true,
+      "ignoreCase": true
     }],
     "eqeqeq": ["error", "smart"],
     "no-await-in-loop": "error",
