--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "babel-runtime": "^6.23.0"
   },
   "devDependencies": {
+    "@prodo-ai/eslint-plugin-prodo": "^1.0.0",
     "ava": "^0.25.0",
     "babel-cli": "^6.24.0",
     "babel-core": "^6.23.1",
