--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "babel-runtime": "^6.23.0"
   },
   "devDependencies": {
-    "@prodo-ai/eslint-plugin-prodo": "^1.0.0",
+    "@prodo-ai/eslint-plugin": "^1.0.0",
     "ava": "^0.25.0",
     "babel-cli": "^6.24.0",
     "babel-core": "^6.23.1",
@@ -35,7 +35,7 @@
     "babel-plugin-transform-flow-strip-types": "^6.22.0",
     "babel-preset-env": "^1.6.1",
     "babel-preset-stage-0": "^6.22.0",
-    "eslint": "^4.19.1",
+    "eslint": "^v5.0.0-alpha.2",
     "eslint-config-prettier": "^2.9.0",
     "eslint-plugin-babel": "^5.1.0",
     "eslint-plugin-flowtype": "^2.46.3",
